add strip in CFLAGS

--- a/main/Makefile
+++ b/main/Makefile
@@ -1,5 +1,5 @@
 CC = /home/irdetogame/dillon/work/kernel/zhao/gcc-4.4.4-glibc-2.11.1-multilib-1.0/arm-fsl-linux-gnueabi/bin/arm-fsl-linux-gnueabi-gcc
-CFLAGS = -g -Wall -lm
+CFLAGS = -g -Wall -lm -s
 
 INCLUDE_PATH = -I ./
 
