update sw version

--- a/main/Makefile
+++ b/main/Makefile
@@ -3,8 +3,11 @@ CFLAGS = -g -Wall -lm -s
 #CFLAGS += -DNO_LOG
 
 INCLUDE_PATH = -I ./
+all : debug release
 
-all: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+debug: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
 	$(CC) $(INCLUDE_PATH) $(CFLAGS) -o cap-imx280 ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+release: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+	$(CC) $(INCLUDE_PATH) $(CFLAGS) -DNO_LOG -o cap-imx280-no-log ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
 clean:
-	$(RM) *.o cap-imx280
+	$(RM) *.o cap-imx280*
