--- a/main/Makefile
+++ b/main/Makefile
@@ -6,8 +6,8 @@ INCLUDE_PATH = -I ./
 all : debug release
 
 debug: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
-	$(CC) $(INCLUDE_PATH) $(CFLAGS) -o cap-imx280 ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+	$(CC) $(INCLUDE_PATH) $(CFLAGS) -o ../cap-imx280 ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
 release: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
-	$(CC) $(INCLUDE_PATH) $(CFLAGS) -DNO_LOG -o cap-imx280-no-log ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+	$(CC) $(INCLUDE_PATH) $(CFLAGS) -DNO_LOG -o ../cap-imx280-no-log ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
 clean:
 	$(RM) *.o cap-imx280*
