add thread to check network status

--- a/main/Makefile
+++ b/main/Makefile
@@ -1,5 +1,5 @@
 CC = /home/dillon/work/tools/gcc-4.4.4-glibc-2.11.1-multilib-1.0/arm-fsl-linux-gnueabi/bin/arm-none-linux-gnueabi-gcc
-CFLAGS = -g -Wall -lm -s
+CFLAGS = -g -Wall -lm -s -lpthread
 #CFLAGS += -DNO_LOG
 
 INCLUDE_PATH = -I ./
