--- a/main/Makefile
+++ b/main/Makefile
@@ -1,4 +1,4 @@
-CC = /home/dillon/work/tools/gcc-4.4.4-glibc-2.11.1-multilib-1.0/arm-fsl-linux-gnueabi/bin/arm-none-linux-gnueabi-gcc
+CC = arm-none-linux-gnueabi-gcc
 CFLAGS = -g -Wall -lm -s -lpthread -L ./curl-imx280/lib -lcurl
 #CFLAGS += -DNO_LOG
 
@@ -6,8 +6,8 @@ INCLUDE_PATH = -I ./ -I ./curl-imx280/include
 all : debug release
 
 debug: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c ./curl.c
-	$(CC) $(INCLUDE_PATH) $(CFLAGS) -o ../cap-imx280 ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+	$(CC) $(INCLUDE_PATH) $(CFLAGS) -o ../cap-imx280 ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c ./curl.c
 release: ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c ./curl.c
-	$(CC) $(INCLUDE_PATH) $(CFLAGS) -DNO_LOG -o ../cap-imx280-no-log ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c
+	$(CC) $(INCLUDE_PATH) $(CFLAGS) -DNO_LOG -o ../cap-imx280-no-log ./cJSON.c ./dwin.c ./history.c ./misc.c ./netlib.c ./cap.c ./xfer.c ./main.c ./log.c ./curl.c
 clean:
 	$(RM) *.o cap-imx280*
